--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-    "doubleQuote": true,
+
     "bracketSpacing": true,
     "tabWidth": 2,
     "trailingComma": "es5",
-    "semi": true
+    "singleQuote": true,
+    "semi": false
 }
